# XOptimizer

./: .gitignore  .gitmodules  LICENSE  README.md  writefile.txt
.github/workflows/: core-algo.yml
GUI/: GUI.pro  xoptimizer.cpp  xoptimizer.h  xoptimizer.ui
GUI_merged/: GUI.pro  Map.qml  main.cpp  writefile.txt  xoptimizer.cpp  xoptimizer.h  xoptimizer.ui  xoptimizer.ui.autosave
app/: .gitignore  CMakeLists.txt  interaction_service.cpp  interaction_service.h  interaction_service_qt.cpp
app/Interaction_service/: Interaction_service.cpp  Interaction_service.h  Interaction_service.pro  main.cpp
app/Interaction_service/Utils/Parser/: pbf-parser.h
app/build-HTTP_test-Qt_6_2_0_for_macOS-Debug/: .qmake.stash  Makefile
app/build-HTTP_test-Qt_6_2_0_for_macOS-Debug/HTTP_test.app/Contents/: Info.plist
app/interaction_service/: .gitignore  CMakeLists.txt  file_storage.cpp  file_storage.h  interaction_service.cpp  interaction_service.h  interaction_service_qt.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  order_parser.h  testing.cpp  testing.h
app/interaction_service/core-algo/: CMakeLists.txt
app/interaction_service/core-algo/lib/blossom5-v2_05/: example.cpp
app/interaction_service/core-algo/local_test/: CMakeLists.txt
app/interaction_service/core-algo/more_tests/: CMakeLists.txt  graph_algorithms_test.cpp
app/interaction_service/core-algo/src/disjointset/: disjointset.cpp
app/interaction_service/core-algo/src/graph/: graph_algorithms.cpp  graph_algorithms.hpp  graph_path_analysis.cpp
app/interaction_service/core-algo/src/map/: map_dijkstra.cpp
app/interaction_service/core-algo/temp/Vec3/: Vec3.cpp
app/interaction_service/core-algo/temp/blossom/: blossom.cpp  blossom.hpp
app/interaction_service/core-algo/temp/graph/: graph.hpp  graph_path_analysis.cpp
app/interaction_service/core-algo/temp/map/: map.cpp
app/interaction_service/core-algo/test/src/: disjointset.cc  graph_TSP_approximation.cc  random_graph.cpp  random_graph_minimum_spanning_tree.cpp  random_graph_tsp.cpp
app/interaction_service/core-algo/test/temp/: disjointset.cc  graph.cc  graph_TSP_approximation.cc  graph_vertex.cc  map.cc  random_graph.hpp  random_graph_maximal_mincost_matching.cpp  random_graph_tsp.cpp  random_map.hpp
app/interaction_service/parser/: CMakeLists.txt  pbf-parser.cpp  pbf-parser.h
app/interaction_service/parser/prototypes/: fileformat.proto  osmformat.proto
app/interaction_service/resources/: test2.csv  test_long.csv  test_short.csv
app/interaction_service/utils/: Wrapper.cpp  Wrapper.pro  api_wrapper.cpp  api_wrapper.h  downloader.cpp  geocoder.cpp  main.cpp  order_parser.cpp  order_parser.h
app/interaction_service/utils/downloader/: downloader.cpp
app/parser/: CMakeLists.txt
app/parser/prototypes/: fileformat.proto
app/utils/: downloader.cpp  order_parser.cpp
build-GUI-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_xoptimizer.h  writefile.txt
build-GUI-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/debug/: moc_xoptimizer.cpp  qrc_qml.cpp
core-algo/: .gitignore  CMakeLists.txt
core-algo/blossom/: blossom.cpp  blossom.hpp
core-algo/lib/blossom5-v2_05/: PerfectMatching.h  blossom5  example.cpp
core-algo/local_test/: CMakeLists.txt  test.cpp
core-algo/more_tests/: CMakeLists.txt  Vec3_test.cpp  autotest.cpp  test_routing.cpp
core-algo/src/: CMakeLists.txt  disjointset.cpp  graph.cpp  graph_algo_interface.cpp  graph_vertexdata.cpp  gtest.cc  vertex.cpp  vertexdata.cpp
core-algo/src/Vec3/: Vec3.cpp
core-algo/src/disjointset/: disjointset.hpp
core-algo/src/graph/: graph.hpp  graph_TSP_approximation.cpp  graph_algo_interface.cpp  graph_algorithms.cpp  graph_clustering_vertices.cpp  graph_edge.cpp  graph_matching.cpp  graph_minspanning.cpp  graph_vertexdata.cpp
core-algo/src/map/: map.cpp  map.hpp  map_dijkstra.cpp
core-algo/temp/: TSP_approximation.cpp  TSP_held_karp.cpp  Vec3.hpp  Vec3_temp.cpp  Vec3_test.cpp  algo_interface.cpp  clustering_vertices.cpp  dijkstra.cpp  disjointset.cpp  disjointset.hpp  edge.cpp  graph.cpp  graph.hpp  graph_TSP_approximation.cpp  graph_algo_interface.cpp  graph_algorithms.cpp  graph_algorithms.hpp  graph_algorithms_temp.cpp  graph_algorithms_test.cpp  graph_matching.cpp  graph_minspanning.cpp  graph_path_analysis.cpp  graphfuncs.cpp  kmeans.cpp  map.cpp  map.hpp  map_dijkstra.cpp  map_find_distance_astar.cpp  map_nearest_neighbor.cpp  matching.cpp  minspanning.cpp  path_analysis.cpp  routing_decisions.cpp  vertex.cpp  vertexdata.cpp
core-algo/temp/Vec3/: Vec3.hpp
core-algo/temp/blossom/: blossom.cpp
core-algo/temp/graph/: graph.hpp  graph_TSP_approximation.cpp  graph_TSP_held_karp.cpp  graph_matching.cpp
core-algo/temp/map/: map_dijkstra_slow.cpp
core-algo/test/: CMakeLists.txt  disjointset.cc  edge.cc  graph.cc  matching.cc  minspanning.cc  mock.cpp  random_graph.cpp  random_graph.hpp  vertex.cc  vertex_data.cc
core-algo/test/src/: disjointset.cc  edge.cc  graph.cc  graph_edge.cc  graph_euler_tour.cc  graph_minspanning.cc  graph_vertex.cc  graph_vertex_data.cc  matching.cc  minspanning.cc  random_graph.cpp  random_graph.hpp  random_map.cpp  random_map.hpp  vertex.cc  vertex_data.cc
core-algo/test/temp/: TSP_approximation.cc  disjointset.cc  edge.cc  euler_tour.cc  graph.cc  graph_edge.cc  graph_vertex.cc  graph_vertex_data.cc  map.cc  matching.cc  random_graph.cpp  random_graph.hpp  random_graph_eulerian_circuit.cpp  random_graph_tsp.cpp  random_map.hpp  vertex_data.cc
core-algo/trash/: kmeans.cpp
doc/: project_design.md
file_parser/: file_parser.pro  main.cpp  main.h
pbf-parser/: CMakeLists.txt  pbf-parser.cpp  pbf-parser.h
pbf-parser/GeoCoder/: main.cpp
pbf-parser/Wrapper/: main.cpp
playground/: kd_tree.h  kdtree.cpp
playground/CSV_CONVERTOR/: csv_convertor.cpp
playground/Interaction_service/: Interaction_service.h  interaction_service.ui
playground/KdTree/: CMakeLists.txt  kdtree.cpp  kdtree.h
reports/: 05-12.md  06-12.md  07-11.md  12-12.md  14-11.md  19-12.md  21-11.md  28-11.md  Zarko_Bulic.md
(+36 files in other folders)
